k8s/api-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-strip
spec:
  stripPrefix:
    prefixes:
      - /api
