k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: task-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: task-frontend

  template:
    metadata:
      labels:
        app: task-frontend

    spec:
      containers:
        - name: task-frontend
          image: ghcr.io/galacticgit007/task-frontend:latest

          ports:
            - containerPort: 80
