k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-api

spec:
  selector:
    app: task-api

  ports:
    - port: 5000
      targetPort: 5000
