k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-frontend

spec:
  selector:
    app: task-frontend

  ports:
    - port: 80
      targetPort: 80
