k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-api-strip@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          # API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: task-api
                port:
                  number: 5000

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-frontend
                port:
                  number: 80
